added Plummer's example, and started some tutorials

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,12 @@ export(metropolishastings)
 export(mixture_rmixmod)
 export(move_step)
 export(normalize_weight)
+export(plummer_data)
+export(plummer_full_posterior)
+export(plummer_module1)
+export(plummer_module2)
+export(plummer_module2_conditional)
+export(plummer_module2_loglikelihood)
 export(randomwalk_proposal)
 export(setmytheme)
 export(smcsampler)
