--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Description: Reproduces the experiments in https://arxiv.org/abs/1708.08719
 License: GPL v2
 Imports: Rcpp (>= 0.12.13), RcppEigen (>= 0.3.3.3.0)
 LinkingTo: Rcpp, RcppEigen,doParallel,doRNG,foreach,ggplot2
-Depends: Rcpp, RcppEigen,doParallel,doRNG,foreach,ggplot2
+Depends: Rcpp, RcppEigen,doParallel,doRNG,foreach,ggplot2,dplyr,ggthemes
 RoxygenNote: 6.0.1
